@@ -932,6 +932,10 @@ sub move {
 	$dist = distance($char->{pos}, $args{move_to});
 	$args{ai_move_giveup}{timeout} = $timeout{ai_move_giveup}{timeout};
 
+	if ($x == 0 && $y == 0) {
+		error "BUG: move(0, 0) called!\n";
+		return;
+	}
 	debug sprintf("Sending move from (%d,%d) to (%d,%d) - distance %.2f\n",
 		$char->{pos}{x}, $char->{pos}{y}, $x, $y, $dist), "ai_move";
 	AI::queue("move", \%args);
